# summerhouse

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yaml
.claude/: hookify.cloudwatch-logs-mcp.local.md  hookify.require-aws-profile.local.md
.claude/rules/: auto-pr-conventions.md  auto-pr-metrics.md
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-api.txt  requirements.txt
backend/api/: pyproject.toml
backend/api/src/api/: dependencies.py  docs.py  exceptions.py  main.py
backend/api/src/api/middleware/: __init__.py  correlation.py
backend/api/src/api/models/: __init__.py  availability.py  common.py  guests.py  payments.py  pricing.py  reservations.py
backend/api/src/api/routes/: __init__.py  area.py  availability.py  customers.py  guests.py  payments.py  pricing.py  property.py  reservations.py  webhooks.py
backend/api/src/api/scripts/: generate_openapi.py
backend/lambdas/otp-interceptor/: handler.py  requirements.txt
backend/lambdas/otp-interceptor/tests/: test_handler.py
backend/scripts/: cleanup_data.py  seed_data.py
backend/shared/src/shared/models/: __init__.py  errors.py  payment.py  stripe_webhook.py
backend/shared/src/shared/services/: __init__.py  area_data.py  dynamodb.py  identity_client.py  payment_service.py  pricing.py  property_data.py  refund_policy_service.py  ssm_service.py  stripe_service.py  webhook_handler.py
backend/shared/src/shared/tools/: area_info.py  property.py
backend/shared/src/shared/utils/: logging.py
backend/src/: agent_app.py  api_app.py
backend/src/agent/: booking_agent.py
backend/src/agent/prompts/: system_prompt.md
backend/src/api/: __init__.py  auth.py
backend/src/data/: property.json
backend/src/models/: __init__.py  auth.py  enums.py  errors.py  guest.py  oauth2_session.py  property.py
backend/src/services/: auth_service.py  availability.py  dynamodb.py  identity_client.py
backend/src/tools/: __init__.py  auth.py  availability.py  guest.py  property.py  reservations.py
backend/src/utils/: __init__.py  jwt.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_api.py  test_auth_contracts.py  test_checkout_session_contract.py  test_openapi_schema.py  test_payment_retry_contract.py  test_payment_status_contract.py  test_refund_contract.py  test_webhook_contract.py
backend/tests/e2e/: __init__.py  conftest.py  test_live_api.py
backend/tests/integration/: __init__.py  test_auth_acceptance.py  test_auth_flow.py  test_booking_flow.py  test_dynamodb_cognito_sub.py  test_payment_flow.py  test_workspace_imports.py
backend/tests/unit/: test_alternative_dates.py  test_api_app.py  test_auth_service.py  test_auth_tools.py  test_cancel_reservation.py  test_get_reservation.py  test_identity_client.py  test_modify_reservation.py  test_oauth2_session.py  test_payment_service.py  test_photos.py  test_property.py  test_refund_policy.py  test_stripe_service.py  test_stripe_webhooks.py  test_user_verification.py
backend/tests/unit/api/: test_customer_models.py  test_customers_router.py  test_routes_area.py  test_routes_property.py
frontend/: .eslintrc.json  openapi-ts.config.ts  package.json  playwright.config.ts  tailwind.config.ts
frontend/playwright-report/: index.html
frontend/public/: 403.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAgentChat.ts  useAuthenticatedUser.ts  useAvailability.ts  useCheckoutSession.ts  useCreateReservation.ts  useCustomerProfile.ts  useFormPersistence.ts  usePaymentStatus.ts  usePricing.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/contract/: chat.test.ts
frontend/tests/e2e/: anonymous-inquiry.spec.ts  auth-callback.spec.ts  auth-flow.spec.ts  auth-step.spec.ts  auth.spec.ts  booking.spec.ts  debug-header-length.spec.ts  debug-real-jwt.spec.ts  direct-booking.spec.ts  otp-retrieval.spec.ts  payment-flow.spec.ts  routing.spec.ts  static-pages.spec.ts
infrastructure/: main.tf  outputs.tf  variables.tf
infrastructure/environments/dev/: backend.hcl  terraform.tfvars.json
infrastructure/modules/cognito-passwordless/: main.tf  outputs.tf  variables.tf
infrastructure/modules/dynamodb/: main.tf  outputs.tf
infrastructure/modules/gateway-v2/: main.tf  outputs.tf  variables.tf
infrastructure/modules/otp-interceptor/: main.tf  outputs.tf  variables.tf
infrastructure/modules/static-website/: main.tf  outputs.tf  variables.tf  waf.tf
specs/001-agent-booking-platform/: quickstart.md  tasks.md
specs/002-static-website-waf/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-static-website-waf/checklists/: requirements.md
specs/003-agentcore-identity-oauth2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agentcore-identity-oauth2/checklists/: requirements.md
specs/003-agentcore-identity-oauth2/contracts/: auth-api.yaml  (+1 more)
specs/004-jwt-session-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-agentcore-amplify-oauth2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-tools-api-endpoints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-rest-api-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-booking-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-amplify-auth-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-fix-routing-waf/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-stripe-payment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-stripe-checkout-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-booking-auth-step/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-e2e-email-otp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+79 files in other folders)
