[project]
name = "booking-backend"
version = "0.1.0"
description = "Quesada Apartment Agent-First Vacation Rental Booking Platform - Backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Quesada Apartment Team" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]

# Workspace root depends on all members for unified testing
dependencies = [
  "shared",
  "api",
  "agent",
]

# Workspace dependency sources
[tool.uv.sources]
shared = { workspace = true }
api = { workspace = true }
agent = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "boto3-stubs[dynamodb,cognito-idp,ses]>=1.35.0",
  "moto>=5.0.0",
  "httpx>=0.28.0",
  "pydantic-to-typescript>=1.0.10",
  "jsonschema>=4.0.0",
]

# UV Workspace configuration - declares the three package members
[tool.uv.workspace]
members = ["agent", "api", "shared"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["shared/src", "api/src", "agent/src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # function calls in argument defaults
  "B904", # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "api", "agent"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["strands.*", "moto.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
  "unit: marks tests as unit tests (no external dependencies)",
  "integration: marks tests as integration tests (requires real AWS services)",
  "e2e: marks tests as end-to-end tests (runs against live deployed API)",
  "public: marks tests for public endpoints (no auth required)",
  "protected: marks tests for protected endpoints (auth required)",
]
filterwarnings = [
  # Ignore strands library internal deprecation warning (not in our codebase)
  "ignore:BeforeModelCallEvent.*:DeprecationWarning:strands.experimental.hooks",
]
