[project]
name = "api"
version = "0.1.0"
description = "FastAPI REST API for Booking platform"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "mangum>=0.19.0",
  "pydantic-settings>=2.0.0",
  "stripe>=8.0.0",
  "shared",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

# UV build backend expects src/api layout by default

# Workspace dependency: use local shared package
[tool.uv.sources]
shared = { workspace = true }
